--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "version": "1.0.0",
   "description": "Twitch nightbot js command simple built system",
   "main": "make.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4"
+  },
   "author": "Jacobtread",
   "license": "MIT"
 }
